--- a/app.json
+++ b/app.json
@@ -3,7 +3,7 @@
   "description": "whatsapp user bot",
   "repository": "https://github.com/Lightmker/SUBZERO-V2",
   "logo": "https://qu.ax/igJFS.png",
-  "success_url": "https://github.com/Lightmker /SUBZERO-V2",
+  "success_url": "https://github.com/Lightmker/SUBZERO-V2",
   "keywords": [
     "nodejs", "heroku", "bot", "urdu", "english", "indonesian", "arab", "portuguese", "italian", "french", "whatsapp",
     "termux", "superbot", "multi-device", "md", "official", "javascript", "princebot"
